--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -22,7 +22,7 @@ body {
 .page-header h1 a,
 .page-header h1 a:visited,
 .page-header h1 a:active {
-    color: #ffffff;
+    color: #000000;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -35,7 +35,7 @@ h4 {
 }
 
 .date {
-    color: #13edfb;
+    color: #828282;
 }
 
 .save {
@@ -53,6 +53,7 @@ h4 {
     color: #ffffff;
     float: right;
     font-size: 26pt;
+    font-family: 'Lobster', cursive;
     margin-right: 20px;
 }
 
@@ -68,6 +69,7 @@ h4 {
 .post > .date,
 .post > .actions {
     float: right;
+    
 }
 
 .btn-secondary,
