--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,14 +12,17 @@
         <header class="page-header">
             <div class="container">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu">
+                    <a href="{% url 'post_new' %}" class="top-menu" >Add_Post
                         {% include './icons/file-earmark-plus.svg' %}
+                    </a>
+                    <a href="{% url 'post_draft_list' %}" class="top-menu">
+                        <span class="glyphicon glyphicon-edit">
+                        </span>
                     </a>
                 {% endif %}
                 <h1><a href="/">Django Bady Blog</a></h1>
             </div>
         </header>
-
         <main class="container">
             <div class="row">
                 <div class="col">
@@ -27,7 +31,5 @@
                 </div>
             </div>
         </main>
-
-        <p>Check8: It works!</p>
     </body>
 </html>
