--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for post in posts %}
         <article class="post">
-            <time class="date">
+            <time class="date">published:
                 {{ post.published_date }}
             </time>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
