--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,9 +12,11 @@
         <header class="page-header">
             <div class="container">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu" >Add_Post
-                        {% include './icons/file-earmark-plus.svg' %}
-                    </a>
+                    <aside class="actions">
+                        <a class="btn btn-tertiary" href="{% url 'post_new' %}" class="top-menu" >Add Post
+                            {% include './icons/file-earmark-plus.svg' %}
+                        </a>
+                    </aside>
                     <a href="{% url 'post_draft_list' %}" class="top-menu">
                         <span class="glyphicon glyphicon-edit">
                         </span>
