--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,7 @@
             {% if user.is_authenticated %}
                 <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">Edit
                     {% include './icons/pencil-fill.svg' %}
+                    
                 </a>
                 <a class="btn btn-secondary" href="{% url 'post_remove' pk=post.pk %}">Delete
                     {% include './icons/trash2-fill.svg' %}
@@ -19,9 +20,17 @@
                 {{ post.published_date }}
             </div>
         {% else %}
-            <a class="btn btn-secondary" href="{% url 'post_publish' pk=post.pk %}">Publish
-                {% include './icons/cloud-check-fill.svg' %}
-            </a>
+            
+                <aside class="actions">
+                    <a class="btn btn-secondary" href="{% url 'post_publish' pk=post.pk %}">Publish
+                        {% include './icons/cloud-check-fill.svg' %}
+
+                    </a>
+                </aside>
+                <div class="date">created:
+                    {{ post.created_date }}
+                </div>
+            
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
