Done lots of Homework.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -37,6 +37,7 @@ h4 {
 .date {
     color: #828282;
     margin-right: 5px;
+    float: right;
 }
 
 .save {
@@ -51,7 +52,8 @@ h4 {
 .top-menu,
 .top-menu:hover,
 .top-menu:visited {
-    color: #ffffff;
+    color: #000000;
+    font-family: 'Lobster', cursive;
     float: right;
     font-size: 15pt;
     margin-right: 20px;
@@ -96,4 +98,12 @@ h4 {
     color: #FFFFFF;
     background-color: #C25100;
     border-color: #ffffff;
+}
+
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
+.listcomments {
+    color: #828282;
 }
